Revise README for Hiro's Marine Application
Updated the README to reflect the new application name and features, and improved the overall structure and formatting.